# WDS_projekt

./: data_send_simpulator_hex.py  servo_simulator.py
HEX_Service/: CMakeLists.txt  Doxyfile  datareader.cpp  datareader.h  datasimulator.cpp  datasimulator.h  fmqualityview.cpp  fmqualityview.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  servo_test_data.txt  servoanglemanager.cpp  servoanglemanager.h  sideview.cpp  sideview.h  topview.cpp  topview.h  translations.qrc
HEX_Service/data/: generate_comm_data.py  servo_test_data.txt  servo_test_data_smooth.txt
HEX_Service/docs/html/: CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CMakeFiles_23_828_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  Desktop-Debug_2CMakeFiles_23_828_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  annotated.html  annotated_dup.js  classDataReader-members.html  classDataReader.html  classDataReader.js  classDataReader__coll__graph.dot  classDataReader__coll__graph.md5  classDataReader__inherit__graph.dot  classDataReader__inherit__graph.map  classDataSimulator-members.html  classDataSimulator.html  classDataSimulator.js  classDataSimulator__coll__graph.dot  classDataSimulator__coll__graph.map  classDataSimulator__coll__graph.md5  classDataSimulator__inherit__graph.dot  classDataSimulator__inherit__graph.map  classDataSimulator__inherit__graph.md5  classFmQualityView-members.html  classFmQualityView.html  classFmQualityView.js  classFmQualityView__coll__graph.map  classFmQualityView__coll__graph.md5  classFmQualityView__inherit__graph.dot  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classServoAngleManager-members.html  classServoAngleManager.html  classServoAngleManager.js  (+427 more)
HEX_Service/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  (+67 more)
HEX_Service/translations/: hex_service_en.qm  hex_service_en.ts  hex_service_en.ts.backup  hex_service_pl.qm  hex_service_pl.ts  hex_service_pl.ts.backup
(+1 files in other folders)
